--- a/luci-app-filebrowser/luasrc/view/filebrowser/filebrowser_status.htm
+++ b/luci-app-filebrowser/luasrc/view/filebrowser/filebrowser_status.htm
@@ -4,7 +4,7 @@ XHR.poll(1, '<%=url([[admin]], [[nas]], [[filebrowser]], [[status]])%>', null,
 		var tb = document.getElementById('filebrowser_status');
 		if (data && tb) {
 			if (data.running) {
-				var links = '<font color=green>Filebrowser <%:运行中%></font><input class="cbi-button mar-10" type="button" value="<%:打开管理界面%>" onclick="openClient();" />';
+				var links = '<font color=green>Filebrowser <%:RUNING%></font><input class="cbi-button mar-10" type="button" value="<%:Open FileBrowser%>" onclick="openClient();" />';
 				tb.innerHTML = links;
 			} else {
 				tb.innerHTML = '<font color=red>Filebrowser <%:未运行%></font>';
